# CPU-Rasterizer

./: CMakeLists.txt  README.md  main.cpp  scene.json
assets/config/levels/: test_level.json
assets/dynamic/: bird.glb  dragon.glb  fox.glb  hero.glb
assets/static/: dessert.glb  lava_plants.glb
assignment/: CMakeLists.txt  scene_1_offload.cpp  scene_1_realtime.cpp  scene_2_offload.cpp  scene_2_realtime.cpp
assignment/include/: fgen.h
assignment/include/base/: fmath.h  light.h  renderer.h  triangle.h  zbuffer.h
assignment/include/optimized/: fecs.h  gfx_dx11.h  optimized_renderer.h  platform_windows.h  types.h
assignment/include/scenes/: interface_scene.h  scene1.h  scene2.h  scene_manager.h
assignment/resource/: app.rc  resource.h
assignment/src/: gfx_dx11.cpp  optimized_renderer.cpp  platform_windows.cpp  scene1.cpp  scene2.cpp
include/: file_system.h  fmath.h  helpers.h  json_loader.h  light.h  mesh.h  texture_cache.h
include/fox/: scene_io.h  scene_paths.h
include/fox/editor/: drag_move_tool.h
include/game/: camera.h  dynamic_mesh.h  game_components.h  game_world.h  level_builder_ui.h  render_queue.h  static_mesh.h
include/optimized/: fecs.h  gfx_dx11.h  imgui_hook.h  optimized_renderer.h  platform_windows.h  types.h
src/: camera.cpp  dynamic_mesh.cpp  file_system.cpp  game_world.cpp  gfx_dx11.cpp  helpers.cpp  imgui_hook.cpp  json_loader.cpp  level_builder_ui.cpp  optimized_renderer.cpp  platform_windows.cpp  render_queue.cpp  static_mesh.cpp  texture_cache.cpp
src/editor/: drag_move_tool.cpp
src/fox/: scene_io.cpp
